k8s/app1-frontend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app1-frontend
  labels:
    managed-by: argocd
