k8s/app1-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-frontend
  namespace: app1-frontend
  labels:
    app: app1-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: app1-frontend
