k8s/app1-frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app1-frontend-route
  namespace: app1-frontend
  labels:
    app: app1-frontend
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: demo-gateway
    sectionName: https
  hostnames:
  - "app1.rancher.live"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: app1-frontend
      namespace: app1-frontend
      port: 80
      weight: 100
    timeout: 30s
